testsuite/poke.pkl/load-diag-2.pk
/* { dg-do compile } */

var foo = 10;
load "___foobar___.pk"; /* { dg-error "" } */
var bar = 20;
